Two more tweaks for html explanation

--- a/hh_page_clf/templates/base.html
+++ b/hh_page_clf/templates/base.html
@@ -8,6 +8,9 @@
             font-size: smaller;
             color: darkblue;
         }
+        div.weights {
+            padding-top: 10px;
+        }
         div.weights table {
             font-size: 14px;
         }
